<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleApp"
        android:textSize="@dimen/title_text_size"
        android:textAlignment="center"
        android:padding="@dimen/large_padding"
        android:textColor="@color/black"
        android:paddingTop="@dimen/extra_large_padding"
        android:background="@color/skyblue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/large_padding"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtTotal"
            android:textColor="@color/black"
            android:textSize="@dimen/subtitle_text_size"
            android:layout_marginTop="@dimen/medium_margin"
            />
        <EditText
            android:id="@+id/etTotal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/editTotal"
            android:inputType="numberDecimal"
            android:textColor="@color/dark_gray"
            android:layout_marginBottom="@dimen/medium_margin"
            android:minHeight="@dimen/min_touch_target" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtPersonas"
            android:textColor="@color/black"
            android:textSize="@dimen/subtitle_text_size"
            />
        <EditText
            android:id="@+id/etPersonas"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/editPersonas"
            android:inputType="number"
            android:textColor="@color/dark_gray"
            android:layout_marginBottom="@dimen/medium_margin"
            android:minHeight="@dimen/min_touch_target" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtPropina"
            android:textColor="@color/black"
            android:textSize="@dimen/subtitle_text_size"
            />
        <RadioGroup
            android:id="@+id/rgPropina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/small_margin"
            >
            <RadioButton
                android:id="@+id/rb10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPropina10"
                android:minHeight="@dimen/min_touch_target" />
            <RadioButton
                android:id="@+id/rb15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPropina15"
                android:minHeight="@dimen/min_touch_target" />
            <RadioButton
                android:id="@+id/rb20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPropina20"
                android:minHeight="@dimen/min_touch_target" />
            <RadioButton
                android:id="@+id/rbOtro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtOtro"
                android:minHeight="@dimen/min_touch_target" />
        </RadioGroup>

        <EditText
            android:id="@+id/etCustomTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etCustomTip"
            android:inputType="numberDecimal"
            android:visibility="gone"
            android:minHeight="@dimen/min_touch_target" />

        <Switch
            android:id="@+id/swIVA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtIVA"
            android:layout_marginTop="@dimen/small_margin"
            android:minHeight="@dimen/min_touch_target" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/small_margin"
            >
            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="0dp"
                android:backgroundTint="@color/green"
                android:layout_height="wrap_content"
                android:text="@string/btn_calcular"
                app:icon="@drawable/ic_calculate"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/small_margin"
                android:textSize="@dimen/button_text_size"
                />
            <Button
                android:id="@+id/btnLimpiar"
                android:layout_width="0dp"
                android:backgroundTint="@color/dark_gray"
                android:layout_height="wrap_content"
                android:text="@string/btn_limpiar"
                app:icon="@drawable/ic_cleaning"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/small_margin"
                android:textSize="@dimen/button_text_size"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llResultados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/large_margin"
            android:padding="@dimen/medium_padding"
            android:background="@drawable/rounded_corners"
            android:visibility="gone"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultados"
                android:textSize="@dimen/results_title_text_size"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/small_margin"
                />
            <TextView
                android:id="@+id/tvPropinaCalculada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultadoPropina"
                android:textSize="@dimen/body_text_size"
                android:layout_marginBottom="@dimen/small_margin"
                />
            <TextView
                android:id="@+id/tvTotalPagar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultadoTotal"
                android:textSize="18sp"
                android:layout_marginBottom="5sp"
                />
            <TextView
                android:id="@+id/tvPorPersona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultadoPorPersona"
                android:textSize="@dimen/body_text_size"
                />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>